--- a/lib/test-03.html
+++ b/lib/test-03.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <div id="vue">
@@ -15,17 +15,18 @@
             </ul>
         </template>
     </div>
+    <a href="test-04.html">Next</a>
 
     <script>
         var vue = new Vue({
             el: '#vue',
-            data: {            
+            data: {
                 items: [
                     { parentMsg: 'Hello', childMsg: 'Foo' },
                     { parentMsg: 'Yes', childMsg: 'Bar' },
                     { parentMsg: 'No', childMsg: 'Yue' }
                 ]
-            }      
+            }
         })
     </script>
 </body>
