--- a/lib/test-04.html
+++ b/lib/test-04.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <div id="vue">
@@ -13,6 +13,7 @@
             </li>
         </ul>
     </div>
+    <a href="test-05.html">Next</a>
 
     <script>
         var vue = new Vue({
@@ -20,7 +21,7 @@
             data: {
                 title: 'title',
                 tags: [ 'JavaScript', 'MVVM', 'vue.js' ]
-            }      
+            }
         })
     </script>
 </body>
