--- a/lib/test-06.html
+++ b/lib/test-06.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <div id="repeat-object">
@@ -10,6 +10,7 @@
         <li>================</li>
         <li v-repeat="objectValues">{{$key}}: {{msg}}</li>
     </div>
+    <a href="test-07.html">Next</a>
 
     <script>
         var vue = new Vue({
@@ -28,7 +29,7 @@
                         msg: 'No'
                     }
                 }
-            }      
+            }
         })
     </script>
 </body>
