--- a/lib/test-11.html
+++ b/lib/test-11.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <form id="vue">
@@ -13,6 +13,7 @@
 
         <p><pre>data: {{$data | json 2}}</pre></p>
     </form>
+    <a href="test-12.html">Next</a>
 
     <script>
         var vue = new Vue({
@@ -29,7 +30,7 @@
                         { text: 'd', value: 'four' }
                     ] }
                 ]
-            }      
+            }
         })
     </script>
 </body>
