--- a/lib/test-02.html
+++ b/lib/test-02.html
@@ -2,20 +2,21 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <div id="vue">
         <h1>{{title | uppercase}}</h1>
         <ul>
-            <li 
+            <li
                 v-repeat="items"
-                class="item-{{$index}}" 
+                class="item-{{$index}}"
             >
                 {{$index}} - {{parentMsg}} {{childMsg}}
             </li>
         </ul>
     </div>
+    <a href="test-03.html">Next</a>
 
     <script>
         var vue = new Vue({
@@ -28,7 +29,7 @@
                     { childMsg: 'Bar' },
                     { childMsg: 'Yue' }
                 ]
-            }      
+            }
         })
     </script>
 </body>
