--- a/lib/test-05.html
+++ b/lib/test-05.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <div id="vue">
@@ -15,6 +15,7 @@
     </div>
     <button id="btn-set">remove</button>
     <button id="btn-remove">remove</button>
+    <a href="test-06.html">Next</a>
 
     <script>
         var vue = new Vue({
@@ -25,7 +26,7 @@
                     { name: 'Foo bar', email: 'foo@bar.com' },
                     { name: 'John Doh', email: 'john@doh.com' }
                 ]
-            }      
+            }
         });
         document.getElementById("btn-set").onclick = function(){
             vue.users.$set(2, { name: 'Key Fox', email: 'key@fox.com' });
