--- a/lib/test-07.html
+++ b/lib/test-07.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <div id="vue">
@@ -12,6 +12,7 @@
             <li v-on="click: n++">expression: n = {{n}}</li>
         </ul>
     </div>
+    <a href="test-08.html">Next</a>
 
     <script>
         var vue = new Vue({
@@ -25,7 +26,7 @@
                     console.log(e.target.tagName);
                     console.log(e.targetVM === this);
                 }
-            }  
+            }
         })
     </script>
 </body>
