--- a/lib/test-08.html
+++ b/lib/test-08.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <div id="vue">
@@ -14,6 +14,7 @@
         </ul>
         <button v-on="click: submit('hello!', $event)">Submit</button>
     </div>
+    <a href="test-09.html">Next</a>
 
     <script>
         var vue = new Vue({
