--- a/lib/test-10.html
+++ b/lib/test-10.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <form id="vue">
@@ -13,6 +13,7 @@
 
         <p><pre>data: {{$data | json 2}}</pre></p>
     </form>
+    <a href="test-11.html">Next</a>
 
     <script>
         var vue = new Vue({
@@ -23,7 +24,7 @@
                     { text: 'a', value: 'one' },
                     { text: 'b', value: 'two' }
                 ]
-            }      
+            }
         })
     </script>
 </body>
