--- a/lib/test-13.html
+++ b/lib/test-13.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title></title>
-    <script src="js/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
     <div id="vue">
@@ -14,6 +14,7 @@
 
         <p><pre>data: {{$data | json 2}}</pre></p>
     </div>
+    <a href="test-14.html">Next</a>
 
     <script>
         var vue = new Vue({
