--- a/lib/test-14.html
+++ b/lib/test-14.html
@@ -5,30 +5,29 @@
   <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
-  <div id="vue">
-    First name: <input type="text" v-model="firstName">
-    <br>
-    Last name : <input type="text" v-model="lastName">
-    <br>
-    Full name : {{fullName}}
-
-    <p><pre>data: {{$data | json 2}}</pre></p>
-  </div>
-  <a href="test-15.html">Next</a>
+  <div id="demo" v-demo:hello.a.b="msg"></div>
 
   <script>
-    var vue = new Vue({
-      el: '#vue',
-      data: {
-        firstName: 'Key',
-        lastName: 'Foxth'
-      },
-      computed: {
-        fullName: function(){
-          return this.firstName + ' ' + this.lastName;
-        }
-      }
-    })
+  Vue.directive('demo', {
+    bind: function () {
+      this.el.style.color = '#fff'
+      this.el.style.backgroundColor = this.arg
+    },
+    update: function (value) {
+      this.el.innerHTML =
+        'name - '       + this.name + '<br>' +
+        'expression - ' + this.expression + '<br>' +
+        'argument - '   + this.arg + '<br>' +
+        'modifiers - '  + JSON.stringify(this.modifiers) + '<br>' +
+        'value - '      + value
+    }
+  })
+  var demo = new Vue({
+    el: '#demo',
+    data: {
+      msg: 'hello!'
+    }
+  })
   </script>
 </body>
 </html>
