--- a/lib/test-14.html
+++ b/lib/test-14.html
@@ -5,29 +5,29 @@
   <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
-  <div id="demo" v-demo:hello.a.b="msg"></div>
+  <div id="vue" v-demo:hello.a.b="msg"></div>
 
   <script>
-  Vue.directive('demo', {
-    bind: function () {
-      this.el.style.color = '#fff'
-      this.el.style.backgroundColor = this.arg
-    },
-    update: function (value) {
-      this.el.innerHTML =
-        'name - '       + this.name + '<br>' +
-        'expression - ' + this.expression + '<br>' +
-        'argument - '   + this.arg + '<br>' +
-        'modifiers - '  + JSON.stringify(this.modifiers) + '<br>' +
-        'value - '      + value
-    }
-  })
-  var demo = new Vue({
-    el: '#demo',
-    data: {
-      msg: 'hello!'
-    }
-  })
+    Vue.directive('demo', {
+      bind: function () {
+        this.el.style.color = '#fff'
+        this.el.style.backgroundColor = this.arg
+      },
+      update: function (value) {
+        this.el.innerHTML =
+          'name - '       + this.name + '<br>' +
+          'expression - ' + this.expression + '<br>' +
+          'argument - '   + this.arg + '<br>' +
+          'modifiers - '  + JSON.stringify(this.modifiers) + '<br>' +
+          'value - '      + value
+      }
+    })
+    var vue = new Vue({
+      el: '#vue',
+      data: {
+        msg: 'hello!'
+      }
+    })
   </script>
 </body>
 </html>
