--- a/lib/test-01.html
+++ b/lib/test-01.html
@@ -1,17 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title></title>
-  <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
-
-  <style>
-    body {
-      font-family: Helvetica Neue, Arial, sans-serif;
-    }
-    li.done {
-      text-decoration: line-through;
-    }
-  </style>
 </head>
 <body>
   <div id="vue">
@@ -28,6 +19,7 @@
   </div>
   <a href="test-02.html">Next</a>
 
+  <script src="../node_modules/vue/dist/vue.js"></script>
   <script>
     var vue = new Vue({
       el: '#vue',
