--- a/lib/test-02.html
+++ b/lib/test-02.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title></title>
-  <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
   <div id="vue">
@@ -18,6 +18,7 @@
   </div>
   <a href="test-03.html">Next</a>
 
+  <script src="../node_modules/vue/dist/vue.js"></script>
   <script>
     var vue = new Vue({
       el: '#vue',
