--- a/lib/test-05.html
+++ b/lib/test-05.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title></title>
-  <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
   <div id="vue">
@@ -17,6 +17,7 @@
   <button id="btn-remove">remove</button>
   <a href="test-06.html">Next</a>
 
+  <script src="../node_modules/vue/dist/vue.js"></script>
   <script>
     var vue = new Vue({
       el: '#vue',
