--- a/lib/test-10.html
+++ b/lib/test-10.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title></title>
-  <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
   <form id="vue">
@@ -15,6 +15,7 @@
   </form>
   <a href="test-11.html">Next</a>
 
+  <script src="../node_modules/vue/dist/vue.js"></script>
   <script>
     var vue = new Vue({
       el: '#vue',
