--- a/lib/test-14.html
+++ b/lib/test-14.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title></title>
-  <script src="../node_modules/vue/dist/vue.min.js" charset="utf-8"></script>
 </head>
 <body>
   <div id="vue" v-demo:hello.a.b="msg"></div>
 
+  <script src="../node_modules/vue/dist/vue.js"></script>
   <script>
   Vue.directive('demo', {
     bind: function () {
