--- a/lib/guide/01-getting-started.html
+++ b/lib/guide/01-getting-started.html
@@ -37,7 +37,7 @@
   <hr>
   <a href="test-02.html">Next</a>
 
-  <script src="../node_modules/vue/dist/vue.js"></script>
+  <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
     new Vue({
       el: '#vue-1',
@@ -45,12 +45,14 @@
         message: 'Hello Vue.js!'
       }
     })
+
     new Vue({
       el: '#vue-2',
       data: {
         message: 'Hello Vue.js again!'
       }
     })
+
     new Vue({
       el: '#vue-3',
       data: {
@@ -61,6 +63,7 @@
         ]
       }
     })
+
     new Vue({
       el: '#vue-4',
       data: {
@@ -72,6 +75,7 @@
         }
       }
     })
+    
     new Vue({
       el: '#vue-5',
       data: {
