--- a/lib/guide/test-06.html
+++ b/lib/guide/test-06.html
@@ -12,7 +12,7 @@
   </div>
   <a href="test-07.html">Next</a>
 
-  <script src="../node_modules/vue/dist/vue.js"></script>
+  <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
     var vue = new Vue({
       el: '#repeat-object',
