--- a/lib/guide/test-10.html
+++ b/lib/guide/test-10.html
@@ -15,7 +15,7 @@
   </form>
   <a href="test-11.html">Next</a>
 
-  <script src="../node_modules/vue/dist/vue.js"></script>
+  <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
     var vue = new Vue({
       el: '#vue',
