--- a/lib/guide/test-14.html
+++ b/lib/guide/test-14.html
@@ -7,7 +7,7 @@
 <body>
   <div id="vue" v-demo:hello.a.b="msg"></div>
 
-  <script src="../node_modules/vue/dist/vue.js"></script>
+  <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
   Vue.directive('demo', {
     bind: function () {
