--- a/lib/guide/test-07.html
+++ b/lib/guide/test-07.html
@@ -14,7 +14,7 @@
   </div>
   <a href="test-08.html">Next</a>
 
-  <script src="../node_modules/vue/dist/vue.js"></script>
+  <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
     var vue = new Vue({
       el: '#vue',
