--- a/lib/guide/test-09.html
+++ b/lib/guide/test-09.html
@@ -43,7 +43,7 @@
   </form>
   <a href="test-10.html">Next</a>
 
-  <script src="../node_modules/vue/dist/vue.js"></script>
+  <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
     var vue = new Vue({
       el: '#vue',
