--- a/lib/guide/test-12.html
+++ b/lib/guide/test-12.html
@@ -16,7 +16,7 @@
   </form>
   <a href="test-13.html">Next</a>
 
-  <script src="../node_modules/vue/dist/vue.js"></script>
+  <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
     var vue = new Vue({
       el: '#vue',
