--- a/lib/guide/02-overview.html
+++ b/lib/guide/02-overview.html
@@ -13,7 +13,7 @@
     <p v-if="greeting">Hello!</p>
   </div>
   <hr>
-  <a href="test-03.html">Next</a>
+  <a href="03-the-vue-instance.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
