--- a/lib/guide/05-computed-properties.html
+++ b/lib/guide/05-computed-properties.html
@@ -22,7 +22,7 @@
     <p>lastName: <input v-model="lastName"></p>
   </div>
   <hr>
-  <a href="test-06.html">Next</a>
+  <a href="06-class-and-style-bindings.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
