--- a/lib/guide/01-getting-started.html
+++ b/lib/guide/01-getting-started.html
@@ -35,7 +35,7 @@
     </li>
   </div>
   <hr>
-  <a href="test-02.html">Next</a>
+  <a href="02-overview.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
@@ -75,7 +75,7 @@
         }
       }
     })
-    
+
     new Vue({
       el: '#vue-5',
       data: {
