--- a/lib/guide/03-the-vue-instance.html
+++ b/lib/guide/03-the-vue-instance.html
@@ -7,7 +7,7 @@
 <body>
   <div id="vue">F12</div>
   <hr>
-  <a href="test-04.html">Next</a>
+  <a href="04-data-binding-syntax.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
