--- a/lib/guide/04-data-binding-syntax.html
+++ b/lib/guide/04-data-binding-syntax.html
@@ -30,8 +30,7 @@
     <button v-on:click="alert">Alert</button>
   </div>
   <hr>
-
-  <a href="test-05.html">Next</a>
+  <a href="05-computed-properties.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
