--- a/lib/guide/06-class-and-style-bindings.html
+++ b/lib/guide/06-class-and-style-bindings.html
@@ -30,7 +30,7 @@
     <div v-bind:style="styleObject"></div>
   </div>
   <hr>
-  <a href="test-07.html">Next</a>
+  <a href="07-conditional-rendering.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
