--- a/lib/guide/07-conditional-rendering.html
+++ b/lib/guide/07-conditional-rendering.html
@@ -26,7 +26,7 @@
     </div>
   </div>
   <hr>
-  <a href="test-08.html">Next</a>
+  <a href="08-list-rendering.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
