--- a/lib/guide/09-methods-and-event-handling.html
+++ b/lib/guide/09-methods-and-event-handling.html
@@ -22,7 +22,7 @@
     <input id="input" v-on:keyup.enter="submit">
   </div>
   <hr>
-  <a href="test-10.html">Next</a>
+  <a href="10-form-input-bindings.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
