--- a/lib/guide/08-list-rendering.html
+++ b/lib/guide/08-list-rendering.html
@@ -40,7 +40,7 @@
     </ul>
   </div>
   <hr>
-  <a href="test-09.html">Next</a>
+  <a href="09-methods-and-event-handling.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
