--- a/lib/guide/10-form-input-bindings.html
+++ b/lib/guide/10-form-input-bindings.html
@@ -65,7 +65,7 @@
     <span>Selected: {{ selected }}</span>
   </div>
   <hr>
-  <a href="test-11.html">Next</a>
+  <a href="#">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
