--- a/lib/guide/12-components(important).html
+++ b/lib/guide/12-components(important).html
@@ -83,7 +83,7 @@
   </div>
   <hr>
 
-  <a href="#">Next</a>
+  <a href="13-reactivity-in-depth.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
