--- a/lib/guide/13-reactivity-in-depth.html
+++ b/lib/guide/13-reactivity-in-depth.html
@@ -13,7 +13,7 @@
   <hr>
   <div id="vue-3">{{ message }}</div>
   <hr>
-  <a href="#">Next</a>
+  <a href="14-custom-directives.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
