--- a/lib/guide/11-transitions(important).html
+++ b/lib/guide/11-transitions(important).html
@@ -85,7 +85,7 @@
     </ul>
   </div>
   <hr>
-  <a href="12-components.html">Next</a>
+  <a href="12-components(important).html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
