--- a/lib/guide/15-custom-filters.html
+++ b/lib/guide/15-custom-filters.html
@@ -23,7 +23,7 @@
     <span>{{msg | concat userInput}}</span>
   </div>
   <hr>
-  <a href="#">Next</a>
+  <a href="16-mixins.html">Next</a>
 
   <script src="../../node_modules/vue/dist/vue.js"></script>
   <script>
