--- a/lib/examples/github-commits.html
+++ b/lib/examples/github-commits.html
@@ -5,7 +5,20 @@
   <title>Latest Vue.js commits</title>
   <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Roboto Mono" rel="stylesheet">
   <style>
-
+    #github-commits {
+      font-family: 'Helvetica', Arial, sans-serif;
+    }
+    a {
+      text-decoration: none;
+      color: #f66;
+    }
+    li {
+      line-height: 1.5em;
+      margin-bottom: 20px;
+    }
+    .author, .date {
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
