--- a/lib/examples/github-commits.html
+++ b/lib/examples/github-commits.html
@@ -6,7 +6,9 @@
   <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Roboto Mono" rel="stylesheet">
   <style>
     #github-commits {
-      font-family: 'Helvetica', Arial, sans-serif;
+      font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+      font-size: 15px;
+      color: #34495e;
     }
     a {
       text-decoration: none;
@@ -18,6 +20,9 @@
     }
     .author, .date {
       font-weight: bold;
+      background-color: #ddd;
+      padding: 0 .5em;
+      border-radius: 2px;
     }
   </style>
 </head>
