--- a/lib/examples/firebase-validation.html
+++ b/lib/examples/firebase-validation.html
@@ -3,9 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Firebase validation</title>
+  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Roboto Mono" rel="stylesheet">
   <style>
     body {
-      font-family: Helvetica, Arial, sans-serif;
+      font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
+      font-size: 15px;
+      color: #34495e;
     }
     ul {
       padding: 0;
