--- a/lib/examples/grid-component.html
+++ b/lib/examples/grid-component.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Grid component</title>
+  <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600|Roboto Mono" rel="stylesheet">
   <style>
     body {
-      font-family: Helvetica Neue, Arial, sans-serif;
+      font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
       font-size: 14px;
       color: #444;
     }
